[package]
name = "tg-xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"
clap = { version = "4.6", features = ["derive"] }
