[package]
name = "tg-xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axbuild = { path = "../components/axbuild" }
cargo_metadata = "0.23"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
