[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "axloader"
publish = false
repository.workspace = true
version.workspace = true

[[bin]]
name = "axloader"
path = "src/main.rs"
required-features = ["loader-bin"]

[features]
default = []
loader-bin = []
arch-x86_64 = []
arch-loongarch64 = []
board-asus-nuc15crh = ["arch-x86_64", "loader-bin"]

[dependencies]
httpboot-protocol = { workspace = true }

[target.'cfg(any(windows, unix))'.dependencies]
anyhow = { workspace = true }
object = "0.38"

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { workspace = true, features = ["alloc", "global_allocator"] }
uefi-raw = "0.14.0"
