[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "axloader"
publish = false
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "axloader"
path = "src/main.rs"
required-features = ["loader-bin"]

[features]
default = []
loader-bin = []
board-asus-nuc15crh = ["loader-bin"]

[dependencies]
httpboot-protocol = { workspace = true }

[target.'cfg(any(windows, unix))'.dependencies]
anyhow = { workspace = true }
object = "0.38"

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { workspace = true, features = ["alloc", "global_allocator"] }
uefi-raw = "0.14.0"
