[package]
name = "aic8800"
version = "0.2.4"
edition = "2024"
license = "Apache-2.0"
repository.workspace = true
readme = "README.md"
description = "OS-independent AIC8800 Wi-Fi maintenance-owner state machine"
# Vendor firmware blobs are not vendored into git or the package tarball; the
# build script provisions them into OUT_DIR (from $AIC8800_FIRMWARE_DIR, the
# in-tree `firmware/` dir populated by `cargo xtask`, or the pinned upstream
# source) and verifies each against its SHA-256. The shared manifest lives in
# `src/firmware_manifest.rs`, outside this excluded cache directory, so a
# standalone package retains the same pinned inputs as the workspace tool.
exclude = ["/firmware/"]

[features]
default = []

[build-dependencies]
ureq = "3"
sha2 = "0.10"

[dependencies]
aes = { version = "0.8", default-features = false }
dma-api = { workspace = true }
hmac = { version = "0.12", default-features = false }
log = { workspace = true }
rdif-eth = { workspace = true }
rdif-irq = { workspace = true }
sdio-host2 = { workspace = true }
sdmmc-protocol = { workspace = true, default-features = false, features = ["sdio"] }
sha1 = { version = "0.10", default-features = false }
thiserror = { workspace = true }
