[package]
edition.workspace = true
name = "arm_vcpu"
version = "0.5.5"
authors = [
  "KeYang Hu <keyang.hu@qq.com>",
  "Mingxian Su <aarkegz@gmail.com>",
  "ShiMei Tang <shimei820@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
  "周睿 <zrufo747@outlook.com>",
]
description = "Aarch64 VCPU implementation for Arceos Hypervisor"
repository = "https://github.com/arceos-hypervisor/arm_vcpu"
categories = ["embedded", "no-std"]
keywords = ["hypervisor", "aarch64", "vcpu"]
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none-softfloat"]

[dependencies]
log = "0.4"
spin = "0.10"

aarch64-cpu = "11.0"
numeric-enum-macro = "0.2"

ax-errno = { workspace = true }
ax-percpu = { workspace = true, features = ["arm-el2"] }
axaddrspace = { workspace = true }
axdevice_base = { workspace = true }
axvcpu = { workspace = true }
axvisor_api = { workspace = true }