[package]
version = "0.4.6"
authors = [
  "Mingxian Su <aarkegz@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
]
categories = ["os", "no-std"]
edition.workspace = true
keywords = ["hypervisor", "kernel", "vgic"]
name = "arm_vgic"
repository = "https://github.com/arceos-hypervisor/arm_vgic"
description = "ARM Virtual Generic Interrupt Controller (VGIC) implementation."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none-softfloat"]

[features]
default = []
vgicv3 = []

[dependencies]
axaddrspace = { workspace = true }
axdevice_base = { workspace = true }
axvisor_api = { workspace = true }
aarch64-cpu = "11.0"
aarch64_sysreg = { workspace = true }
ax-errno = { workspace = true }
bitmaps = {version = "3.2", default-features = false}
log = "0.4"
ax-memory-addr = { workspace = true }
spin = "0.10"
tock-registers = "0.10"
