[package]
name = "ax-cgroup"
version = "0.1.0"
repository = "https://github.com/rcore-os/tgoskits"
edition.workspace = true
authors = ["SongShiQ"]
description = "cgroup v2 subsystem for StarryOS"
keywords = ["arceos", "cgroup", "starry"]
categories = ["no-std", "os"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ax-errno = { workspace = true }
ax-kspin = { workspace = true }
ax-lazyinit = { workspace = true }
axfs-ng-vfs = { workspace = true }
log = "0.4"
