[package]
name = "ax-lazyinit"
version = "0.4.6"
repository = "https://github.com/rcore-os/tgoskits"
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Initialize a static value lazily."
keywords = ["lazy", "initialization", "static"]
categories = ["no-std", "rust-patterns"]
license = "Apache-2.0"

[dependencies]
