[package]
authors = [
  "KeYang Hu <keyang.hu@qq.com>",
  "Mingxian Su <aarkegz@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
]
categories = ["embedded", "no-std"]
description = "ArceOS-Hypervisor guest address space management module"
edition.workspace = true
keywords = ["hypervisor", "address-space"]
name = "axaddrspace"
repository = "https://github.com/arceos-hypervisor/axaddrspace"
version = "0.5.7"
license = "Apache-2.0"

[features]
arm-el2 = ["ax-page-table-entry/arm-el2"]
default = ["arm-el2"]

[dependencies]
bit_field = "0.10"
bitflags = "2.9"
cfg-if = "1.0"
ax-lazyinit = { workspace = true }
log = "0.4"
numeric-enum-macro = "0.2"

# Operating system independent modules provided by ArceOS.
ax-errno = { workspace = true }
ax-memory-addr = { workspace = true }
ax-memory-set = { workspace = true }
ax-page-table-entry = { workspace = true }
ax-page-table-multiarch = { workspace = true }
[target.'cfg(any(target_arch = "x86_64", doc))'.dependencies]
x86 = "0.52"

[dev-dependencies]
lazy_static = "1.5"
spin = "0.10"
assert_matches = "1.5.0"
axin = "0.1.0"
