[package]
name = "axbuild"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.6", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["process"], optional = true }
tracing = "0.1"

[features]
default = ["cli"]
cli = ["clap", "tokio"]
