[package]
name = "axdevice"
version = "0.4.7"
description = "A reusable, OS-agnostic device abstraction layer designed for virtual machines."
homepage = "https://github.com/arceos-hypervisor/axdevice"
repository = "https://github.com/arceos-hypervisor/axdevice"
keywords = ["hypervisor"]
authors = ["Su Mingxian <aarkegz@gmail.com>"]
documentation = "https://docs.rs/axdevice"
categories = ["virtualization"]
edition.workspace = true
readme = "README.md"
license = "Apache-2.0"

[features]

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.10"

# System independent crates provided by ArceOS.
ax-errno = { workspace = true }
ax-memory-addr = { workspace = true }
axvmconfig = { path = "../axvmconfig", default-features = false }
axaddrspace = { workspace = true }
axdevice_base = { workspace = true }
range-alloc-arceos = { workspace = true }
[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_vgic = { workspace = true, features = ["vgicv3"] }
[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv_vplic = { workspace = true }